<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abbrev_bytes">B</string>
    <string name="abbrev_gigabytes">GB</string>
    <string name="abbrev_kilobytes">KB</string>
    <string name="abbrev_megabytes">MB</string>
    <string name="about_action">About</string>
    <string name="about_title_fmt">About %s</string>
    <string name="account_clear_dlg_instructions_fmt">Local copies of messages in \"%s\" will be removed. Account settings will be retained.</string>
    <string name="account_clear_dlg_title">Clear Account</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"%s\" will be removed from K-9 Mail.</string>
    <string name="account_delete_dlg_title">Remove Account</string>
    <string name="account_notify_contacts_mail_only_label">Contacts only</string>
    <string name="account_notify_contacts_mail_only_summary">Show notifications only for messages from known contacts</string>
    <string name="account_recreate_dlg_instructions_fmt">All local data for \"%s\" will be removed. Account settings will be retained.</string>
    <string name="account_recreate_dlg_title">Recreate Account</string>
    <string name="account_settings_action">Account settings</string>
    <string name="account_settings_always_bcc_label">Bcc all messages to</string>
    <string name="account_settings_always_show_cc_bcc_label">Always show Cc/Bcc</string>
    <string name="account_settings_autodownload_message_size_1">1Kb</string>
    <string name="account_settings_autodownload_message_size_1024">1Mb</string>
    <string name="account_settings_autodownload_message_size_10240">10Mb</string>
    <string name="account_settings_autodownload_message_size_128">128Kb</string>
    <string name="account_settings_autodownload_message_size_16">16Kb</string>
    <string name="account_settings_autodownload_message_size_2">2Kb</string>
    <string name="action_disable_room_notification">Disable room notifications</string>
    <string name="action_enable_room_notification">Enable room notifications</string>
    <string name="action_invite_by_list">Invite from other rooms</string>
    <string name="action_invite_by_name">Invite from identifier</string>
    <string name="action_leave">Leave Room</string>
    <string name="action_mark_all_as_read">Mark all as read</string>
    <string name="action_members">Members list</string>
    <string name="action_resume_call">Resume call</string>
    <string name="action_room_info">Room info</string>
    <string name="action_search_contact">Search contact</string>
    <string name="action_search_room">搜索同事姓名/手机号/部门</string>
    <string name="action_settings">Settings</string>
    <string name="action_video_call">Video Call</string>
    <string name="action_voice_call">Voice Call</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="email_draft_box">草稿箱</string>
    <string name="email_incoming_box">收件箱</string>
    <string name="email_sent_box">已发送</string>
    <string name="email_trash_box">已删除</string>
    <string name="hs_url">Home Server URL</string>
    <string name="notification_settings_add">Add</string>
    <string name="notification_settings_always_notify">Always notify</string>
    <string name="notification_settings_highlight">Highlight</string>
    <string name="notification_settings_sound">Sound</string>
    <string name="notification_settings_word_to_match">word to match</string>
    <string name="password">Password</string>
    <string name="room_creation_participants">With</string>
    <string name="room_creation_participants_hint">(e.g. @me:hs;...)</string>
    <string name="room_creation_public">Public Room</string>
    <string name="room_creation_room_alias_hint">Room Alias (optional)</string>
    <string name="room_creation_room_name">Name</string>
    <string name="room_creation_room_name_hint">(e.g lunchGroup)</string>
    <string name="room_info_room_canonical_alias">Canonical alias</string>
    <string name="room_info_room_canonical_hint">Enter a canonical alias</string>
    <string name="room_info_room_name">Room name</string>
    <string name="room_info_room_name_hint">Enter a room name</string>
    <string name="room_info_room_topic">Room topic</string>
    <string name="room_info_room_topic_hint">Enter a room topic</string>
    <string name="send_bug_report">Send Bug Report</string>
    <string name="settings_bugs_report">Bug Reports</string>
    <string name="settings_command_commands">"The following commands are available in the room chat:

 /nick &lt;display_name>: change your display name
 /me &lt;action>: send the action you are doing. /me will be replaced by your display name
 /join &lt;room_alias>: join a room
 /kick &lt;user_id> [&lt;reason>]: kick the user
 /ban &lt;user_id> [&lt;reason>]: ban the user
 /unban &lt;user_id>: unban the user
 /op &lt;user_id> &lt;power_level>: set user power level
 /deop &lt;user_id>: reset user power level to the room default value"</string>
    <string name="settings_display_all_events">Display all events</string>
    <string name="settings_display_left_members">Display left members</string>
    <string name="settings_display_public_rooms">Display public rooms with recents</string>
    <string name="settings_hide_unsupported_events">Hide unsupported events</string>
    <string name="settings_rage_shake">Rageshaking to submit bug reports</string>
    <string name="settings_sort_by_last_seen">Sort members by last seen time</string>
    <string name="settings_title_commands">Commands</string>
    <string name="settings_title_config">Configuration</string>
    <string name="settings_title_gcm">Google cloud messaging (GCM)</string>
    <string name="settings_title_notifications">Notifications</string>
    <string name="settings_title_notifications_rules">Update Notifications Rules</string>
    <string name="settings_title_profile">Profile information</string>
    <string name="settings_title_rooms">Rooms</string>
    <string name="settings_use_gcm">Use GCM</string>
    <string name="ssl_cert_new_account_expl">If the server administrator has said that this is expected, ensure that the fingerprint below matches the fingerprint provided by them.</string>
    <string name="ssl_cert_not_trust">This could mean that someone is maliciously intercepting your traffic, or that your phone does not trust the certificate provided by the remote server.</string>
    <string name="ssl_fingerprint_example">00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00</string>
    <string name="ssl_fingerprint_hash">Fingerprint (%s):</string>
    <string name="ssl_only_accept">ONLY accept the certificate if the server administrator has published a fingerprint that matches the one above.</string>
    <string name="username">Username</string>
</resources>