<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:padding="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ssl_cert_not_trust" />
    <TextView android:id="@id/ssl_explanation" android:padding="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ssl_cert_new_account_expl" />
    <TextView android:id="@id/ssl_user_id" android:padding="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:id="@id/ssl_fingerprint_title" android:padding="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ssl_fingerprint_hash" />
    <TextView android:id="@id/ssl_fingerprint" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ssl_fingerprint_example" />
    <TextView android:padding="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ssl_only_accept" />
</LinearLayout>