<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_material_call" android:id="@id/ic_action_resume_call" android:title="@string/action_resume_call" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_material_search" android:id="@id/ic_action_search_contact" android:title="@string/action_search_contact" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_material_find_in_page" android:id="@id/ic_action_search_room" android:title="@string/action_search_room" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_material_done_all" android:id="@id/ic_action_mark_all_as_read" android:title="@string/action_mark_all_as_read" app:showAsAction="ifRoom" />
</menu>