<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/email_popup_bg_fl" android:background="@color/email_c_25000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:divider="@drawable/divider_email" android:showDividers="middle">
        <TextView android:gravity="center" android:id="@id/email_income_tv" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="50.0dip" android:text="@string/email_incoming_box" />
        <TextView android:gravity="center" android:id="@id/email_outgoing_tv" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="50.0dip" android:text="@string/email_sent_box" />
        <TextView android:gravity="center" android:id="@id/email_draft_tv" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="50.0dip" android:text="@string/email_draft_box" />
        <TextView android:gravity="center" android:id="@id/email_delete_tv" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="50.0dip" android:text="@string/email_trash_box" />
    </LinearLayout>
</FrameLayout>